k8s/manifests/k8s/nodejs-ingress-obj-bza.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress-zone-aware
  labels:
    app: backend-zone-aware
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-svc-zone-aware
                port:
                  name: http
